# qoget

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.specify/scripts/bash/: update-agent-context.sh
specs/001-qobuz-sync/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-qobuz-sync/checklists/: requirements.md
specs/001-qobuz-sync/contracts/: qobuz-api.md
specs/002-bandcamp-unified-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-bandcamp-unified-cli/checklists/: requirements.md
specs/002-bandcamp-unified-cli/contracts/: bandcamp-api.md
specs/003-qobuz-format-fallback/: plan.md  research.md  spec.md  tasks.md
specs/003-qobuz-format-fallback/checklists/: requirements.md
src/: bandcamp.rs  bundle.rs  client.rs  config.rs  download.rs  lib.rs  main.rs  models.rs  path.rs  sync.rs
tests/: bandcamp_test.rs  config_test.rs  models_test.rs  path_test.rs  signature_test.rs
workflow/prompts/: bug-fix.md  bug-reproduce.md  bug-test.md  feature-design.md  feature-impl.md  feature-test.md  preamble.md  verify.md
