[package]
name = "qoget"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
indicatif = "0.17"
md5 = "0.7"
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "fs"] }
toml = "0.8"
